# SensorObserver

./: CMakeLists.txt  README.md  main.cpp
Common/: Common.h
Exchange/: Client.cpp  Client.h
Exchange/Protocols/: Base.h  Constants.h  EngineSensors.h  Frames.cpp  Frames.h  SensorSettingsManager.cpp  SensorSettingsManager.h  Sensors.h  SensorsFrames.cpp  SensorsFrames.h
Exchange/Protocols/EngineSensors/: EngineSensors.cpp  EngineSensors.h
Exchange/Protocols/EscSensors/: EscSensors.cpp  EscSensors.h  EscStatus1.cpp  EscStatus1.h  EscStatus2.cpp  EscStatus2.h  EscStatus3.cpp  EscStatus3.h  Frames.h
Exchange/Protocols/VoltageRegulators/: VoltageRegulators.cpp  VoltageRegulators.h
Tools/: CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  ColorButton.cpp  ColorButton.h  ColorProgressBar.cpp  ColorProgressBar.h  SaveToCSV.cpp  SaveToCSV.h  ValueIncrementer.cpp  ValueIncrementer.h
Widgets/: MainWindow.cpp  MainWindow.h
Widgets/Common/: ConnSettings.cpp  ConnSettings.h
Widgets/Other/: MotorControl.cpp  MotorControl.h  SmoothMotorControl.cpp  SmoothMotorControl.h
Widgets/SensorsTable/: DetailingLimitsWidget.cpp  DetailingLimitsWidget.h  DisplayingSensors.cpp  DisplayingSensors.h  ListOfLimits.cpp  ListOfLimits.h  ListOfLimitsWidget.cpp  ListOfLimitsWidget.h  SensorsTableWidget.cpp  SensorsTableWidget.h  VibrationDirection.cpp  VibrationDirection.h
